# JoeQuake

./: .gitignore  FEATURES.md  README.md  SDL.md  build.zig  build.zig.zon  whatsnew.txt
Windows/: joequake.rc
Windows/VisualStudio/: JoeQuake-sw.vcxproj  JoeQuake-sw.vcxproj.filters  JoeQuake.vcxproj  JoeQuake.vcxproj.filters
Windows/curl/: CONTROL
Windows/curl/debug/lib/: libcurl-d.lib
Windows/curl/debug/lib/pkgconfig/: libcurl.pc
Windows/curl/lib/: libcurl.lib
Windows/curl/lib/pkgconfig/: libcurl.pc
Windows/curl/share/curl/: CURLConfig.cmake  CURLConfigComponents.cmake  CURLConfigVersion.cmake  CURLTargets-debug.cmake  CURLTargets-release.cmake  CURLTargets.cmake  copyright  vcpkg.spdx.json
Windows/misc/lib/: libci.lib
docs/: _config.yml  index.html
docs/_data/: settings.yml
docs/_includes/: featured-post.html  footer.html  header.html  screen.html  social-icons.html  toc.html
docs/_includes/subfeatures/: better-look.md  bhop-practice.md  demo-ui.md  demos-menu.md  ghost-recording.md  large-maps.md  md3-models.md  pathtracer-demobrowser.md  wallhack-movekeys.md
docs/_layouts/: home.html  page.html  post.html
docs/_posts/: 2023-08-05-demos-menu.md  2023-08-05-md3-models.md  2023-08-10-md3-models.md  2023-08-15-large-maps.md  2023-08-20-better-look.md  2023-08-20-demos-menu.md  2023-08-25-ghost-recording.md  2023-10-26-demo-ui.md  2024-12-22-wallhack-movekeys.md  2025-07-12-pathtracer-demobrowser.md
docs/_sass/: _base.scss  _code.scss  _default.scss  _footer.scss  _header.scss  _home.scss  _page.scss  _post.scss  _social-icons.scss
docs/assets/css/: main.scss
docs/pages/: about.md  contact.md  cvars-commands.md  download.md  features.md  screens.md
trunk/: CMakeLists.txt  JoeQuake-sw.vcxproj  JoeQuake-sw.vcxproj.filters  JoeQuake.sln  JoeQuake.vcxproj  JoeQuake.vcxproj.filters  anorm_dots.h  anorms.h  asm_i386.h  bgmusic.c  bspfile.h  cd_null.c  cd_win.c  cdaudio.h  chase.c  cl_demo.c  cl_demoui.c  cl_dzip.c  cl_input.c  cl_main.c  cl_parse.c  cl_slist.c  cl_slist.h  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  conproc.c  conproc.h  console.c  console.h  crc.c  crc.h  cvar.c  cvar.h  d_draw.s  d_draw16.s  d_edge.c  (+156 more)
trunk/bhop/: practice.c  practice.h
trunk/billiards/: billiards.c  billiards.h
trunk/ghost/: README.md  demoparse.c  demoparse.h  demosummary.c  demosummary.h  ghost.c  ghost.h  ghost_private.h  ghostparse.c
trunk/pathtracer/: pathtracer.c  pathtracer.h  pathtracer_private.h  wishdir.c  wishdir.h
trunk/qcurses/: browser.c  browser.h  browser_curl.c  browser_curl.h  browser_local.c  browser_local.h  browser_news.c  browser_news.h  qcurses.c  qcurses.h  set.c
